updated the UI
